@@ -16,7 +16,7 @@ import reactor.core.publisher.Mono;
 import java.time.Duration;
 import java.util.Objects;
 
-import static org.springframework.transaction.annotation.Isolation.SERIALIZABLE;
+import static org.springframework.transaction.annotation.Isolation.REPEATABLE_READ;
 import static org.springframework.transaction.annotation.Propagation.REQUIRED;
 
 @Service
@@ -42,7 +42,7 @@ public class AuthorService {
 
     @CachePut("author")
     @Transactional(
-            isolation = SERIALIZABLE,
+            isolation = REPEATABLE_READ,
             propagation = REQUIRED,
             rollbackFor = Exception.class
     )
@@ -53,7 +53,7 @@ public class AuthorService {
                                 identityPrincipal -> {
                                     if (
                                             identityPrincipal.getIsAuthenticated() &&
-                                            Objects.equals(identityPrincipal.getAuthorities().getFirst(), "ADMIN")
+                                            Objects.equals(identityPrincipal.getAuthorities().get(0), "ADMIN")
                                     ) {
                                         return authorMapper.toAuthor(Mono.just(authorRequest))
                                                 .flatMap(authorRepository::save).cache(Duration.ofMinutes(60))
